--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello from test app!</h1>
-    <h2>Test</h2>
+    <p>Poistettu jutut</p>
 </body>
 </html>
